# telemetry-service

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yaml  generate_entities.sh
.github/workflows/: ci.yaml
res/: example_telemetry_payload_v1  example_telemetry_payload_v2_mainnet  example_telemetry_payload_v2_other  example_telemetry_payload_v2_testnet
src/: config.rs  database.rs  error.rs  health.rs  lib.rs  metrics.rs  nodes.rs  server.rs  telemetry.rs
src/entities/: mod.rs  node.rs  prelude.rs
src/migrator/: m20240508_000001_create_tables.rs  m20240603_000002_add_extra_fields.rs  m20240603_000002_node_v2.rs  mod.rs
tests/: health.rs  nodes.rs
