[package]
name = "telemetry-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
clap = { version = "4.5.4", features = ["derive", "env", "string"] }
prometheus-client = "0.22.2"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "tokio-macros", "parking_lot", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["timeout"] }
thiserror = "1.0.60"
derive_more = { version = "=1.0.0-beta.6", features = ["constructor"]}
futures = "0.3.30"
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "0.12.15"
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["clock"], default-features = false }

[dev-dependencies]
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock" ] }
test-log = { version = "0.2.16", features = [ "trace" ] }
tower = "0.4.13"
